# ftxui-trading-terminal-example

./: CMakeLists.txt  README.md
src/: bar_chart_component.cpp  bar_chart_component.hpp  data_utils.hpp  flags_component.cpp  flags_component.hpp  htop_component.cpp  htop_component.hpp  main.cpp  order_book_component.cpp  order_book_component.hpp
